# src/server.ts
@@ -6,6 +6,11 @@ import swaggerDoc from './swagger/swagger-output.json' with { type: 'json' };
 import cors from "cors"
 import userRoutes from "./modules/user/user.routes.js";
 import teacherRoutes from "./modules/teacher/teacher.routes.js"
+import classRoutes from "./modules/classes/classes.routes.js";
+import subjectRoutes from "./modules/subjects/subject.routes.js";
+import studentRoutes from "./modules/student/student.routes.js"
+import submissionRoutes from "./modules/submission/submission.routes.js";
+
 
 
 const app = express();
@@ -48,6 +53,10 @@ app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, {
 app.use("/api/auth", authRoutes);
 app.use("/api/user", userRoutes);
 app.use("/api/teacher", teacherRoutes)
+app.use("/api/classes", classRoutes);
+app.use("/api/subjects", subjectRoutes);
+app.use("/api/student", studentRoutes);
+app.use("/api/submissions", submissionRoutes);
 
 app.get("/", (req: Request, res: Response) => {
   res.json({ message: "API is running" });
